--- a/G4101_Intro_Rmd.Rmd
+++ b/G4101_Intro_Rmd.Rmd
@@ -9,11 +9,6 @@ output:
     number_sections: yes
     theme: spacelab
     toc: yes
-  html_notebook:
-    highlight: pygments
-    number_sections: yes
-    theme: flatly
-    toc: yes
   pdf_document:
     df_print: kable
     keep_tex: yes
@@ -26,13 +21,13 @@ always_allow_html: yes
 
 # Introduccion
 
-Este es un [R Markdown](http://rmarkdown.rstudio.com) Notebook (Cuaderno R Markdown). Cuando ejecuta el codigo dentro del cuaderno el resultado aparece por debajo del codigo.
+Este es un documento [R Markdown](http://rmarkdown.rstudio.com). Permite trabajar con texto y ejecutar codigo de manera conjunta para generar un documento completo de su analisis. Para compilar el documento haga click en *Knit* (![](imgs/rstudio-knit-button.png){width="39" height="15"}).
 
-Para ejecutar una seccion de codigo se puede hacer click en el boton de *Run* (flecha verde) dentro de la seccion o colocando el cursor dentro de la seccion y ejecutando *Ctrl+Shift+Enter* (Windows) o *Cmd+Shift+Enter* (Mac). Asi de facil!
+Los bloques de codigo se identifican por `{r}`, con opciones (opcionales) en formato YAML que empiezan con `#|` al inicio de cada bloque o dentro de `{r}`. Para ejecutar un bloque de codigo se puede hacer click en el boton de *Run* (![](imgs/rstudio-run-chunk.png){width="20"}) dentro del bloque, o colocando el cursor dentro del bloque y ejecutando *Cmd+Shift+Enter* (Mac) o *Ctrl+Shift+Enter* (Windows).
 
-Se puede agregar una nueva seccion haciendo click en *Insert Chunk* o ejecutando *Ctrl+Alt+I* (Windows) o *Cmd+Option+I* (Mac).
+Se puede agregar una nueva seccion haciendo click en *Insert Chunk* (![](imgs/rstudio-insert-chunk-button.png){width="25" height="15"}), o ejecutando *Ctrl+Alt+I* (Windows) o *Cmd+Option+I* (Mac).
 
-El primer bloque siempre se usa para definir parametros y paquetes a usar durante la sesion.
+El primer bloque siempre se usa para cargar paquetes y datos a usar durante la sesion, así como parametros opcionales globales. Los bloques pueden llevar una etiqueta (label) pero no es necesario; si se usan las etiquetas todas deben ser diferentes, no pueden haber dos bloques de codigo con la misma etiqueta.
 
 ```{r setup, include=TRUE, message=FALSE, warning=FALSE}
 library(MOTE)
@@ -44,6 +39,24 @@ library(plotly)
 library(dygraphs)
 library(rio)
 library(tidyverse)
+
+formato.salida = case_when(
+  knitr::is_html_output() ~ 'html',
+  knitr::is_latex_output() ~ 'latex',
+  T  ~ 'simple',
+)
+
+options(
+  knitr.table.format = formato.salida
+  # OutDec = ','
+  , digits = 3
+)
+
+set_flextable_defaults(
+  # decimal.mark = ',',
+  # big.mark = '.',
+  digits = 3
+)
 
 knitr::opts_chunk$set(
   echo = TRUE,
@@ -64,7 +77,7 @@ knitr::opts_chunk$set(
 
 ## Consola
 
-Podemos crear diferentes objetos dentro de la seccion como sifuera la consola de R. Creemos un objeto que contenga los numeros del 1 al 15.
+Podemos crear diferentes objetos dentro del bloque como si fuera la consola de **R**. Creemos un objeto que contenga los numeros del 1 al 15.
 
 ```{r numeros}
 numeros <- seq_len(15)
@@ -74,7 +87,8 @@ numeros
 Podemos desplegar tablas. La apariencia va a cambiar dependiendo el formato de salida y va a estar sujeta (en principio) a la opcion `df_print` en el encabezado YAML.
 
 ```{r tabla}
-mtcars
+mtcars %>% 
+  head()
 ```
 
 Tablas tambien se pueden usar diferentes paquetes para representarlas mejor en el documento final. Dentro de las opciones tipicas estan los paquetes **flextable**, **kableExtra**, y **gt**, con las funciones `flextable`, `kable`, y `gt`, respectivamente. **flextable** es el mas versatil y permite crear tablas para todo tipo de documento, **kableExtra** sirve mas para *html* y *pdf*, y **gt** sirve para *html*.
@@ -99,9 +113,12 @@ mtcars %>%
 
 ## Graficos
 
-Graficos de **ggplot2** o cualquier otro grafico estatico son resultados que se pueden desplegar. Opciones para el control sobre las figuras van a empezar con `fig.` en el encabezado del codigo (como se observa en el siguiente ejemplo donde se ajusta el ancho a 6 pulgadas)
+Graficos de **ggplot2** o cualquier otro grafico estatico son resultados que se pueden desplegar dentro del coumento. Opciones para el control sobre las figuras van a empezar con `fig.` en el encabezado del codigo (como se observa en el siguiente ejemplo donde se ajusta el ancho a 6 pulgadas)
 
-```{r grafico, fig.width=6}
+```{r fig-disp}
+#| fig.width: 6
+#| fig.cap: "Grafico de dispersion creado con **ggplot2**."
+
 q = ggplot(mtcars, aes(wt,mpg,col=factor(cyl))) + 
   geom_point(size=2,shape=1) + 
   theme_bw() + 
@@ -115,7 +132,8 @@ Si el analisis en **R** involucra componentes interactivos, estos tambien son co
 
 El siguiente codigo genera un grafico interactivo de una serie temporal.
 
-```{r widgets, eval=knitr::is_html_output()}
+```{r fig-dygraph, fig.cap="Grafico interactivo creado con **dygraph**.", eval=knitr::is_html_output()}
+
 dygraph(nhtemp, main = "Temperaturas de New Haven") %>% 
   dyRangeSelector(dateWindow = c("1920-01-01", "1960-01-01"))
 ```
@@ -123,12 +141,17 @@ dygraph(nhtemp, main = "Temperaturas de New Haven") %>%
 Esta es la version interactiva del grafico de ggplot anteriormente generado.
 
 ```{r plotly, eval=knitr::is_html_output()}
+#| label: fig-plotly
+#| fig-cap: "Grafico interactivo creado con **plotly**."
+
 ggplotly(q)
 ```
 
 # Formulas
 
-Expresiones matematicas y formulas se pueden desplegar en linea, dentro del cuerpo del texto ($A = \pi*r^{2}$) o por separado $$E = mc^{2}$$ Para escribir estas expresiones se usa lenguaje `LaTeX`.
+Expresiones matematicas y formulas se pueden desplegar en linea, dentro del cuerpo del texto ($A = \pi*r^{2}$) o por separado
+
+$$E = mc^{2}$$ Para escribir estas expresiones se usa lenguaje `LaTeX`.
 
 # Importando datos
 
@@ -150,16 +173,18 @@ Para dar formato a valores se pueden usar funciones como `apa()` del paquete **M
 
 La mejor manera es usando el paquete **knitr**. Aqui se ajusta no el ancho de la figura directamente sino que se le dice que se ajuste a un 50% del ancho disponible. Existen otras opciones que empiezan con `out.`.
 
-```{r fig.cap='R Rocks', out.width='50%'}
+```{r}
+#| label: fig-rocks
+#| fig-cap: "R-Rocks"
+#| out-width: '70%'
+
 knitr::include_graphics('imgs/r_rocks.jpg')
 ```
 
 # Salvando y compartiendo
 
-Los documentos *R Markdown* tienen como extension `.Rmd`. Cuando se crea y se salva un cuaderno se crea un archivo adjunto con extension `.nb.html`. Este archivo contiene una copia renderizada del cuaderno, que puede ser visualizada en cualquier navegador. Cuando se abre el archivo `.nb.html` en un navegador se va a tener la opcion de descargar el codigo original (`.Rmd`).
-
-Para previsualizar el cuaderno renderizado (`.nb.html`) haga click en *Preview*. La previsualizacion le muestra una copia renderizada del *html*. A diferencia de *Knit* (para otros documentos R Markdown), *Preview* no ejecuta ninguna seccion de codigo, por lo que si una seccion no se ha ejecutado en el editor (cuaderno) el *Preview* no va a mostrar ningun resultado. La previsualizacion se actualiza cada vez que se salva el documento `.Rmd`.
+Los documentos *R Markdown* tienen como extension `.Rmd`. Cuando se compila se crea un archivo adjunto con extension `.html`. Este archivo contiene una copia renderizada del cuaderno, que puede ser visualizada en cualquier navegador.
 
 ## Otros formatos
 
-El cuaderno es un documento *R Markdown*. Se puede cambiar el formato de salida cambiando el orden en el encabezado YAML. En ese caso el *Preview* es reemplazado por *Knit*. Tambien se puede generar desplegando el menu contextual haciendo click en la flecha junto a *Preview*. Tambien se pueden crear documentos *pdf* o *word*.
+El documento *R Markdown* se puede compilar a diferentes formatos de salida, dependiendo de las opciones especificadas en `output` en el encabezado YAML.
