--- a/G4101_lab4_estadistica_distribuciones.Rmd
+++ b/G4101_lab4_estadistica_distribuciones.Rmd
@@ -2,10 +2,12 @@
 title: "Lab 4: Distribuciones de probabilidad"
 author: "Maximiliano Garnier Villarreal"
 output:
-  html_notebook:
-    highlight: pygments
+  html_document:
+    df_print: paged
+    highlight: textmate
+    keep_md: yes
     number_sections: yes
-    theme: flatly
+    theme: spacelab
     toc: yes
   word_document:
     toc: yes
@@ -14,13 +16,7 @@ output:
     keep_tex: yes
     number_sections: yes
     toc: yes
-  html_document:
-    df_print: paged
-    highlight: textmate
-    keep_md: yes
-    number_sections: yes
-    theme: spacelab
-    toc: yes
+always_allow_html: yes
 always_allow_html: yes
 ---
 
